[package]
name = "project-creation-tui"
version = "1.0.2"
edition = "2024"
license-file = "COPYING.txt"
description = "My TUI for generating different types of projects"
homepage = "https://github.com/Ghostboo124/project-creation"
repository = "https://github.com/Ghostboo124/project-creation"
readme = "README.md"

[[bin]]
name = "create-project"
path = "src/main.rs"
test = false
bench = false


[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
regex = "1.11.1"
